--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/Main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TECH-TREE"
@@ -18,119 +19,128 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Select_component"
         android:layout_width="wrap_content"
         android:layout_height="29dp"
+        android:layout_marginTop="86dp"
         android:text="Selecione o componente que deseja procurar."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="121dp" />
+        app:layout_constraintTop_toBottomOf="@+id/Main_title" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Processador"
         android:layout_width="183dp"
         android:layout_height="55dp"
+        android:layout_marginTop="104dp"
         android:text="PROCESSADOR"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="254dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Select_component" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:text="PLACA GRÁFICA"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="358dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Memória_RAM" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/Motherboard"
         android:layout_width="218dp"
         android:layout_height="55dp"
         android:text="MOTHERBOARD"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="468dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Placas_de_som" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/Caixas"
         android:layout_width="218dp"
         android:layout_height="55dp"
+        android:layout_marginTop="2dp"
         android:text="CAIXAS"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Fonte_de_alimentação" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/Monitores"
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:text="MONITORES"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="468dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Coolers" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/Coolers"
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:text="COOLERS"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="413dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/Placas_de_som"
         android:layout_width="218dp"
         android:layout_height="55dp"
         android:text="PLACAS DE SOM"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="413dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Armazenamento" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/Memória_RAM"
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:text="MEMÓRIA RAM"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Processador" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/Fonte_de_alimentação"
         android:layout_width="218dp"
         android:layout_height="55dp"
+        android:layout_marginTop="102dp"
         android:text="FONTE DE ALIMENTAÇÃO"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Select_component" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/Armazenamento"
         android:layout_width="218dp"
         android:layout_height="55dp"
         android:text="ARMAZENAMENTO"
-        tools:layout_editor_absoluteX="196dp"
-        tools:layout_editor_absoluteY="358dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Caixas" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="192dp"
         android:layout_height="25dp"
+        android:layout_marginStart="222dp"
+        android:layout_marginTop="21dp"
         android:text="Pimpaloos Corp, 2022/2023"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="701dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botão_de_registo" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/botão_de_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:text="LOGIN "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="584dp" />
+        app:layout_constraintTop_toBottomOf="@+id/Motherboard" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/botão_de_registo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:text="REGISTAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="632dp" />
+        app:layout_constraintTop_toBottomOf="@+id/botão_de_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
