--- a/TrabalhodeMobile2/app/src/main/res/layout/processor_brand.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/processor_brand.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textCPU"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button21"
+        android:id="@+id/cpu_brand_INTEL"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_marginStart="161dp"
@@ -26,13 +26,13 @@
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="129dp"
         android:text="INTEL"
-        app:layout_constraintBottom_toTopOf="@+id/button22"
+        app:layout_constraintBottom_toTopOf="@+id/cpu_brand_AMD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textCPU" />
 
     <Button
-        android:id="@+id/button22"
+        android:id="@+id/cpu_brand_AMD"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_marginStart="128dp"
