--- a/TrabalhodeMobile2/app/src/main/res/layout/processor_model_intel.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/processor_model_intel.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/text_intel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="74dp" />
 
     <Button
-        android:id="@+id/button29"
+        android:id="@+id/button_corei3"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -26,10 +26,10 @@
         android:text="Core i3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/text_intel" />
 
     <Button
-        android:id="@+id/button30"
+        android:id="@+id/button_corei5"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -38,10 +38,10 @@
         android:text="core i5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button29" />
+        app:layout_constraintTop_toBottomOf="@+id/button_corei3" />
 
     <Button
-        android:id="@+id/button31"
+        android:id="@+id/button_corei7"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -50,10 +50,10 @@
         android:text="core i7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button30" />
+        app:layout_constraintTop_toBottomOf="@+id/button_corei5" />
 
     <Button
-        android:id="@+id/button32"
+        android:id="@+id/button_corei9"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -62,10 +62,10 @@
         android:text="core i9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button31" />
+        app:layout_constraintTop_toBottomOf="@+id/button_corei7" />
 
     <Button
-        android:id="@+id/button33"
+        android:id="@+id/button_pentium"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -74,10 +74,10 @@
         android:text="Pentium "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button32" />
+        app:layout_constraintTop_toBottomOf="@+id/button_corei9" />
 
     <Button
-        android:id="@+id/button34"
+        android:id="@+id/button_pentiumGold"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -86,10 +86,10 @@
         android:text="Pentium Gold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button33" />
+        app:layout_constraintTop_toBottomOf="@+id/button_pentium" />
 
     <Button
-        android:id="@+id/button35"
+        android:id="@+id/button_celeron"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="138dp"
@@ -98,5 +98,5 @@
         android:text="Celeron"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
+        app:layout_constraintTop_toBottomOf="@+id/button_pentiumGold" />
 </androidx.constraintlayout.widget.ConstraintLayout>
