--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_register.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_register.xml
@@ -20,10 +20,10 @@
 
     <EditText
         android:id="@+id/register_password_input"
-        android:layout_width="410dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="201dp"
+        android:layout_width="333dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -34,8 +34,8 @@
 
     <EditText
         android:id="@+id/register_email_input"
-        android:layout_width="410dp"
-        android:layout_height="49dp"
+        android:layout_width="333dp"
+        android:layout_height="60dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
@@ -47,6 +47,7 @@
         android:id="@+id/text_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="128dp"
         android:text="Email de utilizador"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +57,8 @@
         android:id="@+id/text_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="12dp"
         android:text="Password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_email_input" />
@@ -73,5 +75,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/register_return_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="363dp"
+        android:layout_marginBottom="53dp"
+        app:layout_constraintBottom_toTopOf="@+id/text_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_thing"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
