--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_login.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,9 @@
     <TextView
         android:id="@+id/login_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
         android:layout_marginStart="80dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="64dp"
         android:text="Insira o seu email de utilizador, e respetiva palavra-passe:"
@@ -57,16 +58,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_email_input" />
 
-    <ImageView
-        android:id="@+id/login_Return_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="44dp"
-        app:layout_constraintBottom_toTopOf="@+id/login_text"
+    <Button
+        android:id="@+id/login_register_button"
+        android:layout_width="304dp"
+        android:layout_height="69dp"
+        android:text="Join pc masterrace (Registrar-te)"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
