--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
@@ -6,7 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".RigBuilder.RigBuilderActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_pc"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
     <ListView
+        android:id="@+id/lista_pc"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="1dp"
