--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
@@ -7,18 +7,41 @@
     tools:context=".RigBuilder.RigBuilderActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_add_pc"
+        android:id="@+id/rig_builder_button_info"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="610dp"
         android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+    <EditText
+        android:id="@+id/rig_builder_text_input"
+        android:layout_width="302dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="Something to Spend a lot of money"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/rig_builder_button_add_pc"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        app:layout_constraintStart_toEndOf="@+id/rig_builder_text_input"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <ListView
-        android:id="@+id/lista_pc"
+        android:id="@+id/rig_builder_pc_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="1dp"
