--- a/TrabalhodeMobile2/app/src/main/res/layout/pc_item_layout.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/pc_item_layout.xml
@@ -13,13 +13,13 @@
     android:paddingBottom="0dp">
 
     <TextView
-        android:id="@+id/pc_item_name"
+        android:id="@+id/pc_name"
         android:layout_width="175dp"
         android:layout_height="32dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="36dp"
         android:text="PC Name"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        app:layout_constraintEnd_toStartOf="@+id/pc_edit_button"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent"
         tools:textSize="20sp" />
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/ic_baseline_computer_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/pc_delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -46,15 +46,15 @@
         app:srcCompat="@drawable/ic_baseline_restore_from_trash_24" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/pc_edit_button"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginStart="29dp"
         android:layout_marginTop="17dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
-        app:layout_constraintStart_toEndOf="@+id/pc_item_name"
+        app:layout_constraintEnd_toStartOf="@+id/pc_delete_button"
+        app:layout_constraintStart_toEndOf="@+id/pc_name"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_edit_24" />
 
