--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_rig_builder.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Something to Spend a lot of money"
-        android:inputType="text"
+        android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,11 +44,10 @@
         android:id="@+id/rig_builder_pc_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/rig_builder_text_input" />
 </androidx.constraintlayout.widget.ConstraintLayout>
