--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,11 @@
         android:layout_width="192dp"
         android:layout_height="25dp"
         android:layout_marginStart="222dp"
+        android:layout_marginTop="29dp"
         android:text="Pimpaloos Corp, 2022/2023"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="701dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button_logout" />
 
     <Button
         android:id="@+id/button_logout"
