--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_part_picker.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_part_picker.xml
@@ -20,33 +20,21 @@
         android:id="@+id/picker_cpu"
         android:layout_width="105dp"
         android:layout_height="105dp"
+        android:layout_marginTop="288dp"
         android:text="cpu"
-        app:layout_constraintBottom_toTopOf="@+id/picker_fragment_display"
         app:layout_constraintEnd_toStartOf="@+id/picker_gpu"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/picker_gpu"
         android:layout_width="105dp"
         android:layout_height="105dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="34dp"
         android:text="gpu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/picker_cpu"
         app:layout_constraintTop_toBottomOf="@+id/part_picker_text" />
 
-    <FrameLayout
-        android:id="@+id/picker_fragment_display"
-        android:layout_width="410dp"
-        android:layout_height="403dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
