if i had more time
i could do a spaghetti

--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_gpu_selector.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_gpu_selector.xml
@@ -6,4 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".PartPicker.GpuSelectorActivity">
 
+    <Button
+        android:id="@+id/gpu_nvidia_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Nvidia"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/gpu_intel_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="53dp"
+        android:text="intel"
+        app:layout_constraintEnd_toStartOf="@+id/gpu_amd_button"
+        app:layout_constraintStart_toEndOf="@+id/gpu_nvidia_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/gpu_amd_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="amd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/gpu_fragment_viewer"
+        android:layout_width="409dp"
+        android:layout_height="665dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
