--- a/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:layout_marginTop="146dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="179dp"
-        android:text="Part Helper"
+        android:text="Part Picker"
         app:layout_constraintBottom_toTopOf="@+id/button_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/main_information_button"
