--- a/TrabalhodeMobile2/app/src/main/res/layout/fragment_amd_cpu.xml
+++ b/TrabalhodeMobile2/app/src/main/res/layout/fragment_amd_cpu.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
     tools:context=".PartPicker.Fragments.AmdCpu">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="AMD"
-        android:textSize="96sp" />
+        android:id="@+id/amd_cpu_list"></ListView>
 
-</FrameLayout>
+</LinearLayout>
